--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for LWP-UserAgent-Patch-LogRequestContent
 
-0.01    2013-04-09 (SHARYANTO) (not yet released)
+0.01    2013-04-10 (SHARYANTO)
 
         First release.
