--- a/Changes
+++ b/Changes
@@ -2,4 +2,4 @@ Revision history for LWP-UserAgent-Patch-LogRequestContent
 
 0.01    2013-04-10 (SHARYANTO)
 
-        First release.
+        - First release.
