--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for LWP-UserAgent-Patch-LogRequestContent
 
+0.02    2015-08-17 (PERLANCAR)
+
+	- No functional changes.
+
+	- Switch from Log::Any to Log::Any::IfLOG.
+
+
 0.01    2013-04-10 (SHARYANTO)
 
         - First release.
