--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for LWP-UserAgent-Patch-LogRequestContent
 
+0.03    2016-10-08 (PERLANCAR)
+
+        - Relaxed version matching of LWP::UserAgent from 6.0* to 6.* since
+          LWP::UserAgent is currently at 6.15 (thanks Jonathan Landis) [GH#1].
+
+
 0.02    2015-08-17 (PERLANCAR)
 
 	- No functional changes.
