--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.04    2017-06-26 (PERLANCAR)
+
+	- Switch from Log::Any to Log::ger.
+
+
 0.03    2016-10-08 (PERLANCAR)
 
         - Relaxed version matching of LWP::UserAgent from 6.0* to 6.* since
