--- a/Changes
+++ b/Changes
@@ -1,21 +1,21 @@
-0.04    2017-06-26 (PERLANCAR)
+0.04    2017-06-26  Released-By: PERLANCAR
 
 	- Switch from Log::Any to Log::ger.
 
 
-0.03    2016-10-08 (PERLANCAR)
+0.03    2016-10-08  Released-By: PERLANCAR
 
         - Relaxed version matching of LWP::UserAgent from 6.0* to 6.* since
           LWP::UserAgent is currently at 6.15 (thanks Jonathan Landis) [GH#1].
 
 
-0.02    2015-08-17 (PERLANCAR)
+0.02    2015-08-17  Released-By: PERLANCAR
 
 	- No functional changes.
 
 	- Switch from Log::Any to Log::Any::IfLOG.
 
 
-0.01    2013-04-10 (SHARYANTO)
+0.01    2013-04-10  Released-By: SHARYANTO
 
         - First release.
